docs(fork-and-grow): point to the dedicated fold plan in aura
Links native-image/FORK-AND-GROW.md's Phase 4/6 section to
aura docs/superpowers/plans/2026-08-05-jls-elide-fold.md, which carries the
decision-locked mechanics: elide lsp as a language-server provider registry,
vendor-as-source, and the 4-export + 1-open build delta.

Co-Authored-By: aura <elidebot@elide.dev>